--- a/src/apps/experimental/components/menu/ActionMenu.module.scss
+++ b/src/apps/experimental/components/menu/ActionMenu.module.scss
@@ -7,7 +7,6 @@
     box-shadow: $menu-shadow;
     padding: $space-2 0;
     min-width: 160px;
-    max-height: min(60vh, 420px);
     overflow: auto;
 }
 
